<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Auto Generated -->
    <string name="app_name">MeetMe</string>
    <string name="hello_world">Hello User!</string>
    <string name="action_settings">Settings</string>

    <!-- MainActivity -->
    <string name="main_activity_user_list_button">Show user list</string>

    <!-- SettingsFragment -->
    <string name="pref_category_title_user_profile">Your userprofile</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_summary_username">Set your username</string>
    <string name="pref_title_firstname">First name</string>
    <string name="pref_summary_firstname">Set your first name</string>
    <string name="pref_title_lastname">Last name</string>
    <string name="pref_summary_lastname">Set your last name</string>
    <string name="pref_title_date_of_birth">Date of birth</string>
    <string name="pref_summary_date_of_birth">Set your date of birth</string>
    <string name="pref_title_gender">Gender</string>
    <string name="pref_summary_gender">Set your gender</string>
    <string name="pref_switchTextOn_gender">Male</string>
    <string name="pref_switchTextOff_gender">Female</string>
    <string name="pref_title_description">Description</string>
    <string name="pref_summary_description">Describe yourself</string>
    <string name="pref_category_title_network">Network</string>
    <string name="pref_service_switch">Visibility</string>
    <string name="pref_service_switch_summary_on">You are currently visible for others</string>
    <string name="pref_service_switch_summary_off">You are currently not visible for others</string>
	<string name="pref_service_switch_text_on">On</string>
	<string name="pref_service_switch_text_off">Off</string>
    
    <!-- SettingsSaveButtonFragment -->
    <string name="settings_save_button_text">Save your settings!</string>

    <!-- UserListActivity -->
    <string name="title_activity_user_list">Users</string>

    <!-- UserListActivityMenu -->
    <string name="action_refresh">Refresh</string>

    <!-- UserListTextFragment -->
    <string name="user_list_text_fragment_no_users_found">Sorry, there are currently
         no users in your network.</string>

    <!-- UserProfileActivity -->
    <string name="title_activity_user_profile">User Profile</string>

    <!-- UserProfileFragment -->
    <string name="user_profile_fragment_user_name_key">Username:</string>
    <string name="user_profile_fragment_first_name_key">First name:</string>
    <string name="user_profile_fragment_last_name_key">Last name:</string>
    <string name="user_profile_fragment_birthday_key">Birthday:</string>
    <string name="user_profile_fragment_gender_key">Gender:</string>
    <string name="user_profile_fragment_description_key">Description:</string>
    <string name="user_profile_fragment_meet_me_button_text">Meet me!</string>
    <string name="user_profile_fragment_chat_button_text">Chat</string>
    
    
    <!-- MMChatFragment -->
    <string name="title_activity_mmchat">Chat</string>
	<string name="mm_chat_fragment_send_button_description">Send Button</string>
	
</resources>
