<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory 
        android:title="@string/pref_category_title_user_profile" >
        <de.hfu.meetme.views.MMEditTextPreference
            android:inputType="text"
            android:key="username"
            android:summary="@string/pref_summary_username"
            android:title="@string/pref_title_username" />
        <de.hfu.meetme.views.MMEditTextPreference
            android:inputType="text"
            android:key="first_name"
            android:summary="@string/pref_summary_firstname"
            android:title="@string/pref_title_firstname" />
        <de.hfu.meetme.views.MMEditTextPreference
            android:inputType="text"
            android:key="last_name"
            android:summary="@string/pref_summary_lastname"
            android:title="@string/pref_title_lastname" />
        <de.hfu.meetme.views.MMEditTextPreference
            android:inputType="date"
            android:key="date_of_birth"
            android:summary="@string/pref_summary_date_of_birth"
            android:title="@string/pref_title_date_of_birth" />

        <SwitchPreference
            android:key="gender"
            android:summary="@string/pref_summary_gender"
            android:switchTextOff="@string/pref_switchTextOff_gender"
            android:switchTextOn="@string/pref_switchTextOn_gender"
            android:title="@string/pref_title_gender" />

        <de.hfu.meetme.views.MMEditTextPreference
            android:inputType="textMultiLine"
            android:key="description"
            android:summary="@string/pref_summary_description"
            android:title="@string/pref_title_description" />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/pref_category_title_network">
        
        <de.hfu.meetme.views.MMSwitchPreference
            android:title="@string/pref_service_switch"
            android:switchTextOff="@string/pref_service_switch_text_off"
            android:switchTextOn="@string/pref_service_switch_text_on"
            android:summaryOn="@string/pref_service_switch_summary_on"
            android:summaryOff="@string/pref_service_switch_summary_off"
            android:key="service_state_on" />
    </PreferenceCategory>

</PreferenceScreen>