<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.hfu.meetme.UserProfileActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <TextView
                android:id="@+id/user_profile_fragment_user_name_key_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_profile_fragment_user_name_key"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_profile_fragment_user_name_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/user_profile_fragment_first_name_key_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_profile_fragment_first_name_key"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_profile_fragment_first_name_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/user_profile_fragment_last_name_key_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_profile_fragment_last_name_key"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_profile_fragment_last_name_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/user_profile_fragment_birthday_key_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_profile_fragment_birthday_key"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_profile_fragment_birthday_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/user_profile_fragment_gender_key_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_profile_fragment_gender_key"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_profile_fragment_gender_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/user_profile_fragment_description_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_profile_fragment_description_key"
        android:textSize="18sp" />

    <Button
        android:id="@+id/user_profile_fragment_meet_me_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="fillTableWithUserData"
        android:text="@string/user_profile_fragment_meet_me_button_text" />

</LinearLayout>